--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-<script src ="js/script.js"></script>
+  <h1>May the force be with you</h1>
+<script src ="js/palindrome.js">hello</script>
 </body>
 </html>
